bpk-lib/crates/core/tests/ui/mer_on_unit_struct.stderr
error: #[derive(MultiEventReactor)] requires a named-field struct; unit structs are not supported
  --> tests/ui/mer_on_unit_struct.rs:24:8
   |
24 | struct Reactor;
   |        ^^^^^^^
